# SignalProcessing

./: .gitignore  .pre-commit-config.yaml  License  ReadMe.md  __init__.py  bitbucket-pipelines.yml  env.yml  example.py  example_space_signal.py  example_time_signal.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
SignalProcessing/: new.py  processing.py  signal.py  signal_tools.py  space_signal.py  time_signal.py  window.py
SignalProcessingTools/: __version__.py  space_signal.py  time_signal.py
tests/: test_signal_processing.py  test_space_signal.py  test_time_signal.py
tests/data/: track_alignment_results.txt
unit_test/: test_signal_tools.py
