[metadata]
name = SignalProcessing
version = 1.1
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = Signal processing tools
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
packages = SignalProcessing
include_package_data = True
install_requires =
    matplotlib>=3.4
    numpy>=1.21
    scipy>=1.7
python_requires = >=3.8
