[metadata]
name = SignalProcessingTools
version = attr: SignalProcessingTools.__version__
author = attr: SignalProcessingTools.__author__
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = Signal processing tools
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
packages = SignalProcessing
include_package_data = True
install_requires =
    matplotlib>=3.10
    numpy>=2.2
    scipy>=1.15
python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=8.3
    tox>=4.24