[metadata]
name = SignalProcessingTools
version = attr: SignalProcessingTools.__version__
author = attr: SignalProcessingTools.__author__
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = Signal processing tools
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = SignalProcessingTools
include_package_data = True
install_requires =
    matplotlib>=3.10
    numpy>=1.26
    scipy>=1.15
python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=8.0
    tox>=4.13